; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_methods.c_any_array_ufunc_overrides.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_methods.c_any_array_ufunc_overrides.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [37 x i8] c"Could not convert object to sequence\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @any_array_ufunc_overrides to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @any_array_ufunc_overrides(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @PyTuple_Size(i32* %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %77

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = call i32* @PySequence_Fast(i32* %19, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  store i32* %20, i32** %10, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  store i32 -1, i32* %3, align 4
  br label %77

24:                                               ; preds = %18
  %25 = load i32*, i32** %10, align 8
  %26 = call i32** @PySequence_Fast_ITEMS(i32* %25)
  store i32** %26, i32*** %11, align 8
  store i32 0, i32* %6, align 4
  br label %27

27:                                               ; preds = %43, %24
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = icmp slt i32 %28, %29
  br i1 %30, label %31, label %46

31:                                               ; preds = %27
  %32 = load i32**, i32*** %11, align 8
  %33 = load i32, i32* %6, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32*, i32** %32, i64 %34
  %36 = load i32*, i32** %35, align 8
  %37 = call i64 @PyUFunc_HasOverride(i32* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %42

39:                                               ; preds = %31
  %40 = load i32*, i32** %10, align 8
  %41 = call i32 @Py_DECREF(i32* %40)
  store i32 1, i32* %3, align 4
  br label %77

42:                                               ; preds = %31
  br label %43

43:                                               ; preds = %42
  %44 = load i32, i32* %6, align 4
  %45 = add nsw i32 %44, 1
  store i32 %45, i32* %6, align 4
  br label %27

46:                                               ; preds = %27
  %47 = load i32*, i32** %10, align 8
  %48 = call i32 @Py_DECREF(i32* %47)
  %49 = load i32*, i32** %5, align 8
  %50 = call i32 @PyUFuncOverride_GetOutObjects(i32* %49, i32** %9, i32*** %12)
  store i32 %50, i32* %8, align 4
  %51 = load i32, i32* %8, align 4
  %52 = icmp slt i32 %51, 0
  br i1 %52, label %53, label %54

53:                                               ; preds = %46
  store i32 -1, i32* %3, align 4
  br label %77

54:                                               ; preds = %46
  store i32 0, i32* %6, align 4
  br label %55

55:                                               ; preds = %71, %54
  %56 = load i32, i32* %6, align 4
  %57 = load i32, i32* %8, align 4
  %58 = icmp slt i32 %56, %57
  br i1 %58, label %59, label %74

59:                                               ; preds = %55
  %60 = load i32**, i32*** %12, align 8
  %61 = load i32, i32* %6, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i32*, i32** %60, i64 %62
  %64 = load i32*, i32** %63, align 8
  %65 = call i64 @PyUFunc_HasOverride(i32* %64)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %67, label %70

67:                                               ; preds = %59
  %68 = load i32*, i32** %9, align 8
  %69 = call i32 @Py_DECREF(i32* %68)
  store i32 1, i32* %3, align 4
  br label %77

70:                                               ; preds = %59
  br label %71

71:                                               ; preds = %70
  %72 = load i32, i32* %6, align 4
  %73 = add nsw i32 %72, 1
  store i32 %73, i32* %6, align 4
  br label %55

74:                                               ; preds = %55
  %75 = load i32*, i32** %9, align 8
  %76 = call i32 @Py_DECREF(i32* %75)
  store i32 0, i32* %3, align 4
  br label %77

77:                                               ; preds = %74, %67, %53, %39, %23, %17
  %78 = load i32, i32* %3, align 4
  ret i32 %78
}

declare dso_local i32 @PyTuple_Size(i32*) #1

declare dso_local i32* @PySequence_Fast(i32*, i8*) #1

declare dso_local i32** @PySequence_Fast_ITEMS(i32*) #1

declare dso_local i64 @PyUFunc_HasOverride(i32*) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32 @PyUFuncOverride_GetOutObjects(i32*, i32**, i32***) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
